<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-dependencies</artifactId>
		<version>2.7.3</version>
	</parent>
	<groupId>exemple</groupId>
	<artifactId>exemple-gateway</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<organization>
		<name>EXEMPLE</name>
	</organization>

	<modules>
		<module>exemple-gateway-server</module>
		<module>exemple-gateway-integration</module>
		<module>jacoco-report</module>
	</modules>

	<scm>
		<connection>scm:git:git://github.com/doudouchat/exemple-gateway.git</connection>
		<developerConnection>scm:git:https://github.com/doudouchat/exemple-gateway.git</developerConnection>
		<url>https://github.com/doudouchat/exemple-gateway</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub doudouchat Packages</name>
			<url>https://maven.pkg.github.com/doudouchat/exemple-gateway</url>
		</repository>
	</distributionManagement>

	<properties>

		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!-- PORT -->

		<api.port>8082</api.port>
		<authorization.port>8084</authorization.port>
		<gateway.port>8080</gateway.port>

		<!-- SONAR -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.coverage.report.path>${basedir}/../jacoco-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.report.path>

	</properties>

	<dependencyManagement>

		<dependencies>

			<!-- SPRING GATEWAY -->

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-gateway</artifactId>
				<version>3.1.3</version>
			</dependency>

			<!-- CLOUD SECURITY -->

			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-jose</artifactId>
				<version>${spring-security.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-resource-server</artifactId>
				<version>${spring-security.version}</version>
			</dependency>

			<!-- SPRING SESSION -->
			<!-- https://spring.io/projects/spring-session -->

			<dependency>
				<groupId>org.springframework.session</groupId>
				<artifactId>spring-session-hazelcast</artifactId>
				<version>2.7.0</version>
				<exclusions>
					<exclusion>
						<groupId>com.hazelcast</groupId>
						<artifactId>hazelcast</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- SPRING JWT -->

			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-jwt</artifactId>
				<version>1.1.1.RELEASE</version>
			</dependency>

			<!-- JWT TOKEN -->
			<!-- https://github.com/auth0/java-jwt -->

			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>4.0.0</version>
			</dependency>

			<!-- COMMONS APACHE -->

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>

			<!-- MOCK SERVER -->

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-netty</artifactId>
				<version>5.13.2</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.13.2</version>
				<scope>test</scope>
			</dependency>

		</dependencies>

	</dependencyManagement>

	<dependencies>

		<!-- LOGGING -->

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
		</dependency>

		<!-- LOGBACK -->

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<!-- YAML -->

		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
		</dependency>

		<!-- LOMBOK -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<!-- JUNIT -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- ASSERTJ -->

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>

				<!-- COMPILATION -->
				<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>

				<!-- JAR -->
				<!-- http://maven.apache.org/plugins/maven-jar-plugin/index.html -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<configuration>
						<archive>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Built-By>${project.organization.name}</Built-By>
								<Build-Time>${maven.build.timestamp}</Build-Time>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<!-- TEST UNITAIRE -->
				<!-- http://maven.apache.org/plugins/maven-surefire-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>${jacoco.test.agent.argLine}</argLine>
					</configuration>
				</plugin>

				<!-- VERSION -->
				<!-- https://www.mojohaus.org/versions-maven-plugin/index.html -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<configuration>
						<processDependencyManagement>false</processDependencyManagement>
						<outputFile>${project.build.directory}/outdated-dependencies.txt</outputFile>
						<outputEncoding>${project.build.sourceEncoding}</outputEncoding>
					</configuration>
				</plugin>

				<!-- JACOCO -->
				<!-- http://www.eclemma.org/jacoco/trunk/doc/maven.html -->
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version>
					<executions>
						<execution>
							<id>prepare-jacoco-ut-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<phase>process-test-classes</phase>
							<configuration>
								<propertyName>jacoco.test.agent.argLine</propertyName>
								<includes>
									<include>com.exemple.gateway.*</include>
								</includes>
							</configuration>
						</execution>
						<execution>
							<id>prepare-jacoco-integration-agent</id>
							<goals>
								<goal>prepare-agent-integration</goal>
							</goals>
							<phase>pre-integration-test</phase>
							<configuration>
								<propertyName>jacoco.it.agent.argLine</propertyName>
								<destFile>${sonar.jacoco.itReportPath}</destFile>
								<includes>
									<include>com.exemple.gateway.*</include>
								</includes>
								<excludes>
									<exclude>*EnhancerBySpringCGLIB*</exclude>
									<exclude>*FastClassBySpringCGLIB*</exclude>
								</excludes>
								<classDumpDir>${project.build.outputDirectory}</classDumpDir>
							</configuration>
						</execution>
						<execution>
							<id>report</id>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- RELEASE -->
				<!-- http://maven.apache.org/maven-release/maven-release-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<!-- COMPILATION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>

			<!-- JACOCO -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>

			<!-- ENFORCER -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5.4</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>

</project>